--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
+    "expo": "^49.0.0",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "styled-components": "^5.3.9",
+    "styled-components-react-native": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
