--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "styled-components": "^5.3.9",
-    "styled-components-react-native": "^1.0.0"
+    "styled-components-react-native": "^1.0.0",
+    "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
